以CoreMod保护生命值并剥离HotSpot实现